source/webapp/sites/all/themes/checkbook3/css/global.css
/* ... */
#payroll-advanced-search .payroll-submit {
    clear: both;
    text-align: right;
    width: 100%;
}
.ui-widget-overlay {
    background: none repeat scroll 0 0 #000000 !important;
    opacity: 0.3;
}
/*Spending section styles*/
#checkbook-advanced-search-form input[name="date_filter"]{
    width: auto;
    float: left;
    margin-right: 5px;
}
textarea, select, input[type="date"], input[type="datetime"], input[type="datetime-local"],
input[type="email"], input[type="month"], input[type="number"], input[type="password"],
input[type="search"], input[type="tel"], input[type="text"], input[type="time"],
input[type="url"], input[type="week"] {
    height:25px;
}

/*****************************
***   DATA TABLE STYLING   ***
*****************************/
.bottomContainer .panel-display.omega-grid.omega-12-onecol,
#budget-transactions.panel-display.omega-grid.omega-12-onecol,
#mini-panel-revenue_landing_page.panel-display.omega-grid.omega-12-onecol,
#revenue-transactions.panel-display.omega-grid.omega-12-onecol{
    margin:0px;
}
.tableHeader{margin-top:20px;}
.tableHeader h2{float:left;}
.tableHeader .contCount{
    float:left;
    color: #5c5c5c;
    font-size:13px;
    font-style: italic;
    font-weight: bold;
    padding-top:6px;
    margin-left:15px;
}
.dataTables_processing {
    height: 24px;
    width: 24px;
    position: absolute;
    right: 0;
    top: 0px;
}
.page-contract-details.spending_transactions .dataTables_processing,
.page-contract-details.payroll_agencytransactions .dataTables_processing{
    top: -20px;
}
.dataTables_wrapper{
    float:left;
    clear:both;
    width:100%;
    margin:12px 0px 8px 0px;
    border:1px solid #cacaca;
}
.dataTables_wrapper table, .outerTable {
    width: 100%;
}
.dataTables_wrapper .dataTables_scroll{

}
.dataTables_wrapper .dataTables_scroll table{
    border: none;
}
.dataTables_wrapper th, .outerTable th{
    background: #48759d; /* Old browsers */
    background: -moz-linear-gradient(top, #48759d 0%, #3f668f 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #48759d), color-stop(100%, #3f668f)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #48759d 0%, #3f668f 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #48759d 0%, #3f668f 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #48759d 0%, #3f668f 100%); /* IE10+ */
    background: linear-gradient(to bottom, #48759d 0%, #3f668f 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#48759d', endColorstr = '#3f668f', GradientType = 0); /* IE6-9 */
    color: #ffffff;
    font-weight: bold;
    text-transform: uppercase;
    vertical-align: middle;
}
.dataTables_wrapper th.number, .outerTable th.number{
    text-align: right;
}
.dataTables_wrapper th.text, .outerTable th.text{
    text-align: left;
}
table.dataTable th.sorting span, table.dataTable th.sorting_asc span, table.dataTable th.sorting_desc span {
    padding-left:15px;
    display:block;
    cursor: pointer;
    float:left;
}
table.dataTable th.sorting span:hover, table.dataTable th.sorting_asc span:hover, table.dataTable th.sorting_desc span:hover {
    text-decoration:underline;
}
table.dataTable th.sorting_desc span {
    background: url("../images/arrow-asc.png") no-repeat scroll left center transparent;
}
table.dataTable th.sorting_asc span {
    background: url("../images/arrow-desc.png") no-repeat scroll left center transparent;
}
.dataTable th:first-child div {
    margin: 8px 0 8px 15px;
}
.dataTable td.text:first-child div {
    margin: 13px 0 13px 15px;
}
.dataTable th.text-left-padding{
    text-align:center;
 }
.dataTable td.text-left-padding div{
    margin: 13px 0 13px 20px;
}


.dataTable th.text-left{
    text-align:left !important;
    vertical-align:middle !important;
}
.dataTable th.text-left span{
    padding-left: 0px !important;
}
.dataTable th.text-left div{
    margin: 0px 0px 0px 20px !important;
    text-align:center !important;
}
.dataTable td.text-left div {
    margin: 13px 0 13px 20px !important;
}

.dataTables_wrapper td, .sub-table td{
    vertical-align: middle;
    text-transform: uppercase;
}
.dataTable th div {
    margin: 8px 0 8px 5px;
}
.dataTable th.text div {
    display:block;
    float:left;
    text-align:center;
}
.dataTable th.number div {
    display:block;
    float:right;
    text-align:center;
}
.dataTable th.number-center div {
    display:block;
    text-align:center;
}
.dataTable td div {
    margin: 13px 0 13px 0px;
}
td.text div {
    float: left;
    text-align: left;
}

td.number div {
    float: right;
    text-align: right;
}
td.number-center {
    text-align: center;
}
table.dataTable tr.even,
table.outerTable.ma-history tr.even{
    background-color: #f8f8f8;
    border:none;
}
table.dataTable tr.odd,
table.outerTable.ma-history tr.odd {
    background-color: #fff;
    border:none;
}
table.outerTable.ma-history th:first-child div,
table.outerTable.ma-history td:first-child div{margin-left:10px;}
.tableFooter {
    float:right;
    clear:both;
    padding-right:5px;
}
.plus-or{margin:0px 12px;}

th.recdate div{
    margin-left: 0;
}
td.recdate div{
    float:right;
}
th.number-left div,
td.number-left div{
    margin-left: 15px;
}
th.endCol div,
td.endCol div,
.outerTable th.endCol div,
.outerTable td.endCol div{
    margin-right: 15px;
}

.dataTables_scrollBody{position:relative;}
/* expandable nested child table styles */
.dataTable td.childcontracts div {
    margin: 0px;
}
.dataTable td.childcontracts .jspPane table td div {
    margin: 13px 0 13px 5px;
}
.dataTable td.childcontracts .jspPane table td.number-left div {
     margin: 13px 0 13px 15px;
 }
.dataTable td.childcontracts .jspPane table td.number-scroll div {
    margin: 13px 0 13px 0px;
    text-align: center;
 }
.dataTable td.childcontracts .jspPane table td.text-left-padding-scroll div {
    margin: 13px 0 13px 20px;
}
td.vers-num div{margin-left:40px;}
/* ... */

